# blogpost

./: forward
blog-verse-creations/: .env  package-lock.json  package.json  tailwind.config.ts
blog-verse-creations/src/: App.tsx  commonFunctions.tsx  index.css
blog-verse-creations/src/components/: BlogCard.tsx  Navbar.tsx
blog-verse-creations/src/components/ui/: card.tsx  toaster.tsx
blog-verse-creations/src/contexts/: AuthContext.tsx  BlogContext.tsx
blog-verse-creations/src/pages/: Auth.tsx  CreatePost.tsx  Home.tsx  MyPosts.tsx  PostDetail.tsx  UserBlogs.tsx
blogpost_backend/: .env  MongoConnection.py  dependencies.py  main.py  pyproject.toml  run
blogpost_backend/Schema/: all_schema.py
blogpost_backend/services/: auth_service.py  user_service.py
blogpost_frontend/: README.md  index.html  package-lock.json  package.json
blogpost_frontend/src/: App.tsx  commonFunctions.tsx
blogpost_frontend/src/components/: BlogCard.tsx  Navbar.tsx
blogpost_frontend/src/contexts/: AuthContext.tsx  BlogContext.tsx
blogpost_frontend/src/hooks/: use-toast.ts
blogpost_frontend/src/pages/: Auth.tsx  CreatePost.tsx  Home.tsx  MyPosts.tsx  PostDetail.tsx
