[project]
name = "blogpost-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "google-generativeai>=0.8.5",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pymongo>=4.15.3",
    "python-jose>=3.5.0",
    "uvicorn>=0.37.0",
]
